# ebpf_llvm_jit

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bpf_printk.md  main.cpp  vcpkg.json
.devcontainer/: debian.sh  devcontainer.json
cmake/: argparse.cmake  libbpf.cmake  llvm-15.cmake  llvm-os.cmake  spdlog.cmake
compiler/: .gitignore  README.md  main.cpp
compiler/cmake/: libbpf.cmake  spdlog.cmake
compiler/src/: ebpf_inst.h
compiler/src/helpers/: helper.cpp  helper.h
compiler/src/jit/: code_gen.cpp  code_gen.h  compiler.cpp  compiler_xdp.cpp  external_function.h
examples/: README.md
examples/01/: Makefile  main.bpf.c  main.c  vmlinux.h
examples/02_qemu_riscv/: Makefile  baremetal.ld  bpf_helpers.c  bpf_helpers.h  hello.asm  main.bpf.c  main.bpf.ll  main.c  qemu_rv_uart.c  qemu_rv_uart.h
examples/02_qemu_riscv_no_calls/: Makefile  README.md  baremetal.ld  bpf_helpers.c  bpf_helpers.h  main.bpf.c  main.bpf.no-calls.ll  main.c
examples/03_qemu_riscv_local_calls/: Makefile  README.md  main.bpf.c  main.bpf.local-calls.ll  main.c  start.S
examples/04_qemu_riscv_helpers_calls/: Makefile  hello.dis.s  main.bpf.c  main.bpf.helpers-calls.ll  main.c
examples/04_qemu_riscv_printk_simple/: Makefile  main.c
examples/05_qemu_riscv_xdp_load_pkt/: Makefile  README.md  main.bpf.c  main.c
examples/06_qemu_riscv_xdp_multiple_pkts/: Makefile  README.md  hello.dis.s  main.bpf.c  main.c
examples/07_qemu_riscv_printk_multisection/: Makefile  README.md  main.bpf.c  main.c
examples/99_baremetal_runtime/: baremetal.ld  bpf_helpers.c  bpf_helpers.h  bpf_printk.c  bpf_printk.md  memory.h  qemu_rv_uart.c  qemu_rv_uart.h
examples/utils/: README.md  packet_capture_hex.txt
rv64_baremetal_runtime/: .gitignore  Makefile  README.md  bpf_printk.c  load_pkt_from_mem.c  load_pkt_from_mem.h  memory.h  qemu_rv_uart.h
src/: ebpf_inst.h
src/helpers/: helper.cpp  helper.h
src/include/: helpers_impl.c  helpers_impl.h
src/jit/: bpftime_llvm_jit_vm.cpp  bpftime_llvm_jit_vm.h  code_gen.cpp  code_gen.h  compiler.cpp  compiler_xdp.cpp  compiler_xdp.h  context.cpp  context.h  external_function.cpp  llvm_bpf_jit_context.cpp  llvm_bpf_jit_context.h  passthrough_section.h  program.h  vm.cpp  vm.h
src/utils/: bo.h
